--- a/demo.html
+++ b/demo.html
@@ -28,10 +28,18 @@
 
     <script type="text/javascript" src="build/jquery.sprawsm-discuss.min.js"></script>
     <script type="text/javascript">
+
       // Your Disqus site shortname
       var disqus_shortname = 'sprawsmdiscussdemo';
+      
       // Unique discussion ID
       var disqus_identifier = 'sprawsmdiscussdemo';
+
+      // Path to stylesheet 
+      // If you are using a relative path, make sure it's relative to 
+      // jquery.sprawsm-discuss.js file and not this document
+      var sd_path = './build/sprawsm-discuss.css'
+      
     </script>
 
   </body>
