Page title change.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Language" content="en">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
         
-    <title>Sprawsm Discussion</title>
+    <title>Superawesøme Design Discussions</title>
 
     <link rel="stylesheet" href="./demo-assets/demo.css">
     
