Added tweet button.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <div class="grid">
 
         <div class="hero-info pad">
+          <div class="promo">
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="sprawsm" data-size="large" data-related="sprawsm">Tweet</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+          </div>
           <a href="http://sprawsm.com/" class="logo-sprawsm">
             <svg width="28px" height="22px" viewBox="0 0 28 22">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
