Minor changes to demo site.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
               <p>You can start using it today, for free.</p>
             </div>
             <div class="hero-action">
-              <a href="https://github.com/sprawsm/sprawsm-discussion" class="button button-primary">Get it on GitHub</a>
+              <a href="https://github.com/sprawsm/sprawsm-discussion" class="button button-primary">GitHub Repository</a>
               <span class="dsb small">or scroll down to learn more</span>
             </div>
+            <div class="hero-footer">Have a problem? Please report it on <a href="#">GitHub Issues</a>.</div>
           </div>
         </div>
 
