--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a href="https://github.com/sprawsm/sprawsm-discussion" class="button button-primary">GitHub Repository</a>
               <span class="dsb small">or scroll down to learn more</span>
             </div>
-            <div class="hero-footer">Have a problem? Please report it on <a href="#">GitHub Issues</a>.</div>
+            <div class="hero-footer">Have a problem? Please report it on <a href="https://github.com/sprawsm/sprawsm-discussion/issues">GitHub Issues</a>.</div>
           </div>
         </div>
 
