--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 
     <link rel="stylesheet" href="./demo-assets/demo.css">
     
-    <!--
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-114.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-144.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144.png">
-    -->
-    
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="apple-touch-icon" sizes="57x57" href="demo-assets/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="demo-assets/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="demo-assets/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="demo-assets/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="demo-assets/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="demo-assets/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="demo-assets/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="demo-assets/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="demo-assets/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="demo-assets/favicon-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="demo-assets/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="demo-assets/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="demo-assets/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="demo-assets/favicon-32x32.png" sizes="32x32">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="msapplication-TileImage" content="demo-assets/mstile-144x144.png">
 
     <script src="//use.typekit.net/hrl1ugm.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
